set up dashboard and scoreboard

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Red Alert 2 Streamer Dashboard</title>
 </head>
 <body>
     <div id="app">{{ message }}</div>
